--- a/app/Client/Base/Layout.template.html
+++ b/app/Client/Base/Layout.template.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <link rel="stylesheet" href="/assets/main.css">
 </head>
 
 <body>
-    {{{@Yield}}}
+    <header>
+        <h2>{{title}}</h2>
+    </header>
+    <main>
+        {{{@Yield}}}
+    </main>
+    <script type="text/javascript" src="/assets/main.js"></script>
 </body>
 
 </html>
